# rvulkan

./: .clang-format  .clang-tidy  .env  .gitignore  Makefile  README.md  imgui.ini  meson.build
assets/: default.glsl  default.vert  frag.spirv  frag.spv  fragment.glsl  meson.build  shader.frag  shader.vert  vert.spirv  vert.spv
editor/: main.cpp  meson.build
rvulkan/: meson.build
rvulkan/assets/: shader.vert
rvulkan/assets/shaders/: shader.vert  vert.spv
rvulkan/include/rvulkan/: vulkan_context.hpp
rvulkan/include/rvulkan/core/: application.hpp  imgui_layer.hpp  layer.hpp  log.hpp  types.hpp
rvulkan/include/rvulkan/events/: event.hpp  key_codes.hpp  key_events.hpp  mouse_codes.hpp  mouse_events.hpp  window_events.hpp
rvulkan/include/rvulkan/imgui/: imgui_utils.hpp
rvulkan/include/rvulkan/imgui/components/: components.hpp
rvulkan/include/rvulkan/renderer/: PipelineLayout.hpp  mesh.hpp
rvulkan/include/rvulkan/scene/: entity.hpp  scene.hpp
rvulkan/include/rvulkan/scene/components/: camera.hpp  mesh_renderer.hpp  tag.hpp  transform.hpp
rvulkan/src/: Application.cpp  Application.hpp  Assert.hpp  Buffer.cpp  Buffer.hpp  Core.hpp  Pipeline.cpp  Pipeline.hpp  RenderPass.cpp  RenderPass.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  VulkanContext.cpp  VulkanContext.hpp  Window.cpp  Window.hpp  meson.build  vulkan_context.cpp
rvulkan/src/Core/: Layer.hpp  Log.cpp  Log.hpp  Memory.cpp  Memory.hpp  meson.build
rvulkan/src/core/: application.cpp  imgui_layer.cpp  layer.hpp  log.cpp  log.hpp  memory.cpp  meson.build
rvulkan/src/debug/: profiler.hpp
rvulkan/src/events/: event.hpp  keycodes.hpp  window_events.hpp
rvulkan/src/renderer/: Mesh.cpp  Mesh.hpp  mesh.cpp  meson.build  render_context.cpp  render_context.hpp  render_pass.cpp  render_pass.hpp  scene_renderer.cpp  scene_renderer.hpp  swapchain.cpp  swapchain.hpp  virtual_frame.cpp  virtual_frame.hpp
rvulkan/src/scene/: Entity.hpp  Scene.cpp  Scene.hpp  meson.build  scene.cpp
rvulkan/src/scene/Components/: Base.hpp  Camera.cpp  Camera.hpp  MeshRenderer.hpp  Tag.hpp  Transform.hpp  meson.build  transform.cpp  transform.hpp
rvulkan/src/scene/components/: camera.cpp  meson.build  transform.cpp
rvulkan/src/vulkan/: LogicalDevice.cpp  LogicalDevice.hpp  PhysicalDevice.cpp  PhysicalDevice.hpp  Surface.cpp  Surface.hpp  meson.build
sandbox/: main.cpp  meson.build
scripts/: compile_shaders.sh
src/: Application.cpp  Application.hpp  Assert.hpp  Context.cpp  Context.hpp  Pipeline.cpp  Pipeline.hpp  RenderPass.cpp  RenderPass.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  VulkanContext.cpp  VulkanContext.hpp  Window.cpp  Window.hpp  main.cpp  (+2 more)
subprojects/packagefiles/vk-bootstrap/: meson.build
(+13 files in other folders)
